2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b10

	* Typo: photoAlbumURL not photoAlbumUrl

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b9

	* Change: $adminCommands links now use CSS to prevent breaks in 
	  two-word links. (e.g. "[manage users]")

	* Change: Change 'one' to '1' to maintain consistancy

	* Change: Clear up to possible PHP notices for use_exif being
	  unset.

2004-07-11  Jens A. Tkotz <jens@peino.de> 1.4.5-cvs-b8

	*  Fix: Links to config wizard and find orphans were not working embedded.
		1.) Changed Link to wizard to direct Url
		2.) Added tools/find_orphans.php to allowed list and modified the file itself, 
		    to work embedded.

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b7

	* Change: Check the UserDB for consistancy before logging into
	  the config wizard.

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b6

	* Change: Incorrect variable assignment in view_album optimization
	  could yield hidden photos viewable

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b5

	* Change: Center the block-random image, to match the text

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b4

	* Change: Update security message to mention secure.sh, and only
	  appear on non-Windows OSes.

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b3

	* Change: Logout with relative URLs would return a redirect error
	  due to doubling of the photoAlbumUrl

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b2

	* Change: Another case of relying on the submit button for a value,
	  but it's now disabled

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b1

	* Change: (1.4.4RC1) Check POST vars for $include before resetting to 'albums.php'

FOR THE REST OF THE CHANGELOG, SEE ChangeLog.archive.gz