@@ -31,7 +31,7 @@ if (!isset($gallery)) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = '1.4.5-cvs-b10';
+$gallery->version = '1.4.5-cvs-b11';
 $gallery->config_version = 82;
 $gallery->album_version = 30;
 $gallery->user_version = 5;
