@@ -19,7 +19,11 @@
 <?php 
 global $GALLERY_EMBEDDED_INSIDE;
        	if (! isset($GALLERY_EMBEDDED_INSIDE)) {
-	       	print gallery_validation_link("slideshow.php", true, array("set_albumName" => $gallery->album->fields['name']));
+		if (!empty($gallery->album)) {
+			print gallery_validation_link("slideshow.php", true, array("set_albumName" => $gallery->album->fields['name']));
+		} else {
+			print gallery_validation_link("slideshow.php", true);
+		}
        	} ?>
           </td>
 <?php if (!isset($gallery->app->rssEnabled) || $gallery->app->rssEnabled == "yes") { ?>
